# json-force-proxy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: configuration.md  index.md  usage.md
src/json_force_proxy/: __init__.py  cli.py  server.py  settings.py
tests/: test_cli.py  test_integration.py  test_server.py
